--- a/Pacemaker/app/src/main/res/values/colors.xml
+++ b/Pacemaker/app/src/main/res/values/colors.xml
@@ -23,14 +23,16 @@
     <color name="base_grey">#FFF9F9F9</color>
     <color name="white">#FFFFFFFF</color>
 
+
     <color name="orange_bg_basic">#FFFF765B</color>
     <color name="orange_bg_thick">#FFF74938</color>
     <color name="orange_bg_transparent">#B3FF765B</color>
 
-    <color name="blue_bg_basic">#FF5C83CF</color>
+    <color name="blue_bg_basic">#5C83CF</color>
     <color name="blue_bg_thick">#FF5f87d6</color>
     <color name="blue_bg_transparent">#B35C83CF</color>
 
+    <color name="white_bg_basic">#FFFFFFFF</color>
     <color name="grey_bg_basic">#FFF9F9F9</color>
     <color name="grey_bg_thick">#FF606060</color>
     <color name="grey_bg_thickest">#FF444646</color>
@@ -41,8 +43,8 @@
     <color name="white_txt_light"></color>
     <color name="black_txt_thick">#FF3b4046</color>
     <color name="black_txt_light"></color>
-    <color name="grey_txt_thick">#FFb2b2b2</color>
-    <color name="grey_txt_light">#FF87888A</color>
+    <color name="grey_txt_thick">#FF87888A</color>
+    <color name="grey_txt_light">#FFb2b2b2</color>
 
 
 </resources>
