--- a/Pacemaker/app/src/main/res/values/styles.xml
+++ b/Pacemaker/app/src/main/res/values/styles.xml
@@ -40,4 +40,25 @@
         <item name="background"
     </style>
 -->
+    <style name ="CalendarDateTextAppearanceDayTime" parent="TextAppearance.MaterialCalendarWidget.Date">
+        <item name="android:textColor">@color/selected_date_day_time</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:focusedMonthDateColor">@color/white_txt_thick</item>
+    </style>
+
+    <style name ="CalendarDateTextAppearanceNightTime" parent="TextAppearance.MaterialCalendarWidget.Date">
+        <item name="android:textColor">@color/selected_date_night_time</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:focusedMonthDateColor">@color/white_txt_thick</item>
+    </style>
+
+    <style name ="CalendarHeaderTextAppearanceDayTime" parent="TextAppearance.MaterialCalendarWidget.Header">
+        <item name="android:textColor">@color/grey_txt_thick</item>
+    </style>
+    <style name ="CalendarHeaderTextAppearanceNightTime" parent="TextAppearance.MaterialCalendarWidget.Header">
+        <item name="android:textColor">@color/grey_txt_light</item>
+    </style>
+
+
+
 </resources>
