--- a/Pacemaker/app/src/main/res/values/colors.xml
+++ b/Pacemaker/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="sub_blue">#B35C83CF</color>
     <color name="base_grey">#FFF9F9F9</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_transparent">#60FFFFFF</color>
 
     <color name="orange_bg_basic">#FFFF765B</color>
     <color name="orange_bg_thick">#FFF74938</color>
@@ -31,7 +32,7 @@
     <color name="white_txt_thick">#FFF7FAFD</color>
     <color name="white_txt_light">#78F7FAFD</color>
     <color name="black_txt_thick">#FF3b4046</color>
-    <color name="black_txt_light"></color>
+    <color name="black_txt_transparent">#603b4046</color>
     <color name="grey_txt_thick">#FF87888A</color>
     <color name="grey_txt_basic">#FFaeb3b3</color>
     <color name="grey_txt_light">#FFb2b2b2</color>
