--- a/Pacemaker/app/src/main/res/layout/fragment_home.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".features.pacemaker.home.HomeFragment">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fHome_recyclerview"
         android:layout_width="match_parent"
@@ -14,7 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/fHome_clo_play"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fHome_floating_action_btn"
@@ -33,8 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1"/>
-
-
+<!--
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/fHome_clo_play"
         android:layout_width="match_parent"
@@ -56,5 +57,6 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
