200511 code review(leejh)

--- a/Pacemaker/app/src/main/res/layout/dialog_profile_input.xml
+++ b/Pacemaker/app/src/main/res/layout/dialog_profile_input.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dProfile_clo_height"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/dProfile_clo_option_height"
@@ -93,7 +93,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dProfile_clo_weight"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/dProfile_clo_option_weight"
         app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +178,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dProfile_clo_confirm"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -200,6 +200,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
