--- a/Pacemaker/app/src/main/res/layout/activity_splash.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_splash.xml
@@ -27,5 +27,18 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:contentDescription="@string/image_not_found"/>
+    
+
+    <TextView
+        android:id="@+id/aSplash_tv_version"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="33dp"
+        android:textSize="18sp"
+        android:textColor="@color/white_FFFFFF"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
