--- a/Pacemaker/app/src/main/res/layout/dialog_profile_input.xml
+++ b/Pacemaker/app/src/main/res/layout/dialog_profile_input.xml
@@ -56,7 +56,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/dProfile_clo_weight"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +139,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/dProfile_clo_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -162,7 +162,7 @@
 
         <Switch
             android:id="@+id/dProfile_swc_mode_weight"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="18dp"
             android:shadowColor="@color/blue_5C83CF_70"
@@ -170,7 +170,7 @@
             android:trackTint="@color/blue_5C83CF_70"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/fOption_tv_mode_weight"
+            app:layout_constraintStart_toEndOf="@+id/dProfile_tv_mode_weight"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
