--- a/Pacemaker/app/src/main/res/layout/activity_pacemaker.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_pacemaker.xml
@@ -79,13 +79,10 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:adUnitId="@string/AD_BANNER_UNIT_ID"
         app:layout_constraintTop_toBottomOf="@+id/aPacemaker_bottom_navigation_view"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- 백업 본 광고 Id
-       ads:adUnitId="ca-app-pub-9818502417467314/5178000798"-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
