--- a/Pacemaker/app/src/main/res/layout/activity_option.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_option.xml
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:adUnitId="@string/AD_BANNER_UNIT_ID"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
