--- a/Pacemaker/app/src/main/res/layout/activity_statistics.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_statistics.xml
@@ -42,17 +42,15 @@
         app:layout_constraintTop_toBottomOf="@+id/aStatistics_clo_title" />
 
     <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/aStatistics_adView"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/AD_BANNER_UNIT_ID"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/aStatistics_flo_container" />
-
-    <!-- 백업 본 광고 Id
-       ads:adUnitId="ca-app-pub-9818502417467314/5178000798"-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
