--- a/Pacemaker/app/src/main/res/layout/activity_statistics.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_statistics.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:adUnitId="@string/AD_BANNER_UNIT_ID"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
