--- a/Pacemaker/app/src/main/res/layout/fragment_tutorial.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_tutorial.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="500dp"
         app:cardSlider_indicator="@id/fTutorial_indicator"
+        app:cardSlider_pageMargin="0dp"
         app:layout_constraintTop_toBottomOf="@+id/fTutorial_indicator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
