--- a/Pacemaker/app/src/main/res/layout/fragment_tutorial.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_tutorial.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey_88898A"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".features.pacemaker.tutorial.TutorialFragment">
 
@@ -10,7 +11,7 @@
         android:id="@+id/fTutorial_indicator"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         app:indicatorsToShow="13"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +20,10 @@
 
     <com.github.islamkhsh.CardSliderViewPager
         android:id="@+id/fTutorial_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:cardSlider_indicator="@id/fTutorial_indicator"
-        app:cardSlider_pageMargin="0dp"
+        app:cardSlider_pageMargin="5dp"
         app:layout_constraintTop_toBottomOf="@+id/fTutorial_indicator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,12 +43,14 @@
 
     <ImageView
         android:id="@+id/fTutorial_iv_finish"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="30dp"
         android:layout_marginEnd="40dp"
         android:src="@drawable/img_save_nighttime"
+        app:layout_constraintTop_toBottomOf="@+id/fTutorial_viewpager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fTutorial_viewpager"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
