--- a/Pacemaker/app/src/main/res/layout/recyclerview_tutorial_item.xml
+++ b/Pacemaker/app/src/main/res/layout/recyclerview_tutorial_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/rvTutorialItem_clo_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#fff8f8f8"
+        android:backgroundTint="@color/grey_88898A"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
