--- a/Pacemaker/app/src/main/res/layout/fragment_tutorial.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_tutorial.xml
@@ -20,7 +20,6 @@
 
     <com.github.islamkhsh.CardSliderViewPager
         android:id="@+id/fTutorial_viewpager"
-
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:cardSlider_indicator="@id/fTutorial_indicator"
@@ -28,8 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/fTutorial_indicator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fTutorial_indicator" />
+        app:layout_constraintBottom_toTopOf="@+id/fTutorial_iv_finish"/>
    <!--
         app:cardSlider_smallScaleFactor="0.9"
         app:cardSlider_otherPagesWidth="24dp"
@@ -45,13 +43,11 @@
 
     <ImageView
         android:id="@+id/fTutorial_iv_finish"
-
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="40dp"
         android:src="@drawable/img_save_nighttime"
         app:layout_constraintTop_toBottomOf="@+id/fTutorial_viewpager"
         app:layout_constraintBottom_toBottomOf="parent"
