--- a/Pacemaker/app/src/main/res/layout/recyclerview_exercise_item.xml
+++ b/Pacemaker/app/src/main/res/layout/recyclerview_exercise_item.xml
@@ -77,8 +77,25 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/rvExerciseItem_tv_slash"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toStartOf="@+id/rvExerciseItem_flo_sort"/>
 
+        <FrameLayout
+            android:id="@+id/rvExerciseItem_flo_sort"
+            android:layout_width="55dp"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rvExerciseItem_tv_set"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/rvexerciseitem_img_wm_drag_handle"
+                android:contentDescription="@string/image_not_found" />
+
+        </FrameLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
