--- a/Pacemaker/app/src/main/res/layout/activity_pacemaker.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_pacemaker.xml
@@ -29,6 +29,26 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <FrameLayout
+            android:id="@+id/aPacemaker_flo_sort"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            app:layout_constraintEnd_toStartOf="@+id/aPacemaker_flo_setting"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/aPacemaker_iv_sort"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginEnd="5dp"
+                android:layout_gravity="center_vertical|end"
+                android:contentDescription="@string/image_not_found"
+                android:src="@drawable/apacemaker_img_sort"/>
+
+        </FrameLayout>
+
+
+        <FrameLayout
             android:id="@+id/aPacemaker_flo_setting"
             android:layout_width="70dp"
             android:layout_height="match_parent"
